--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -38,10 +38,33 @@
     <edit-schedule [schedule]="schedule"></edit-schedule>
   </ion-card-content>
 
-  <div class="info">
-    <ion-item class="progress-label" lines="none">
+  <!-- <div class="info">
+    <ion-item class="progress-label custom-item" lines="none">
       <ion-label>{{timeLeft()}}</ion-label>
-      <!-- <ion-buttons slot="end">
+      <ion-fab horizontal="end">
+        <ion-fab-button>
+          <ion-icon name="ellipsis-vertical"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="start" class="custom-fab-list">
+          <ion-fab-button (click)="toggleEditSlide()">
+            <ion-icon [name]="isEditSlide ? 'close' : 'create'" color="success"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button (click)="presentActionSheet()">
+            <ion-icon name="trash" class="add-icon"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button [id]="id">
+            <ion-icon name="person-add" class="add-icon"></ion-icon>
+          </ion-fab-button>
+        </ion-fab-list>
+      </ion-fab>      
+    </ion-item>
+    <ion-progress-bar [value]="ratio"></ion-progress-bar>
+  </div> -->
+
+  <div class="info">
+    <ion-item class="progress-label custom-item" lines="none">
+      <ion-label>{{timeLeft()}}</ion-label>
+      <ion-buttons slot="end" *ngIf="showOptions">
         <ion-button class="default-button" (click)="toggleEditSlide()">
           <ion-icon [name]="isEditSlide ? 'close' : 'create'" color="success"></ion-icon>
         </ion-button>
@@ -51,26 +74,17 @@
         <ion-button class="default-button" [id]="id">
           <ion-icon name="person-add" class="add-icon"></ion-icon>
         </ion-button>
-      </ion-buttons> -->
-      <ion-fab horizontal="end" style="--background: transparent; box-shadow: none;">
-        <ion-fab-button class="default-button">
-          <ion-icon name="ellipsis-vertical"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-list side="start">
-          <ion-fab-button class="default-button" (click)="toggleEditSlide()">
-            <ion-icon [name]="isEditSlide ? 'close' : 'create'" color="success"></ion-icon>
-          </ion-fab-button>
-          <ion-fab-button class="default-button" (click)="presentActionSheet()">
-            <ion-icon name="trash" class="add-icon"></ion-icon>
-          </ion-fab-button>
-          <ion-fab-button class="default-button" [id]="id">
-            <ion-icon name="person-add" class="add-icon"></ion-icon>
-          </ion-fab-button>
-        </ion-fab-list>
-      </ion-fab>      
+      </ion-buttons>
+
+      <ion-buttons slot="end">
+        <ion-button class="default-button" (click)="toogleOptions()">
+          <ion-icon *ngIf="!showOptions" name="ellipsis-vertical"></ion-icon>
+          <ion-icon *ngIf="showOptions" name="close"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-item>
     <ion-progress-bar [value]="ratio"></ion-progress-bar>
-  </div>
+  </div>  
 </ion-card>
 
 <ion-modal #modal [trigger]="id" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]">
