--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -14,7 +14,7 @@ ion-text {
 .schedule-header{
     --highlight-height: 0;
     --inner-border-width: 0;
-    --background: #A8DADC;
+    --background:  linear-gradient(135deg, #A8DADC 10%, #457b9d 100%); // #A8DADC;
     border-radius: 12px;
     border-end-end-radius: 0px;
     border-end-start-radius: 0px;
