--- a/src/app/pages/view-exercise/view-exercise.page.html
+++ b/src/app/pages/view-exercise/view-exercise.page.html
@@ -1,33 +1,14 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>view-exercise</ion-title>
+    <ion-buttons slot="start">
+      <backbutton></backbutton>
+    </ion-buttons>
+    <ion-title>View Exercise</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">view-exercise</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button class="default-button" (click)="dismissModal()">
-        <ion-icon name="arrow-back" class="bb"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>View Exercises</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content class="centralize">
-  <ion-item-divider sticky>
-    <ion-label> MuscleGroup : MuscleGroupName </ion-label>
-  </ion-item-divider>
-
-  <ion-card *ngFor="let ExerciseTuple of getExerciseDetails()" style="--ion-background-color: #A8DADCFF">
+  <ion-card *ngFor="let ExerciseTuple of ExerciseDetails" style="--ion-background-color: #A8DADCFF">
     <ion-card style="border-style: solid; border-width: thick;">
       <video controls style="width: 100%;" playsinline="" preload="metadata" muted="" autoplay="" loop="">
         <source [src]="ExerciseTuple.video.url" type="video/mp4">
@@ -37,7 +18,7 @@
       <ion-card-title>{{ ExerciseTuple.video.exersiseName }}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      {{ ExerciseTuple.video.exerciseDescription }}
+      {{ ExerciseTuple.video.difficulty }}
     </ion-card-content>
     <!-- Open new page when the button is clicked -->
 
