download button ui

--- a/src/app/pages/download/download.page.html
+++ b/src/app/pages/download/download.page.html
@@ -5,7 +5,11 @@
 </ion-header>
 
 <ion-content class="ion-text-center">
-  <h1>The App will be installed on your device, if you are using Android.</h1>
+  <!-- <h1>The App will be installed on your device, if you are using Android.</h1> -->
+  <ion-button (click)="downloadAPK()">
+    <ion-icon name="logo-android" slot="start"></ion-icon> <!-- Use "logo-android" for the Android icon -->
+    Download
+  </ion-button>
   <div style="padding-top: 45%;">
     <h2>Credits</h2>
     <p>
