--- a/src/app/pages/exercise-explorer/exercise-explorer.page.html
+++ b/src/app/pages/exercise-explorer/exercise-explorer.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-
+<h1 class="center">3D Exercise Model</h1>
 
 <div class="center-container">
   <canvas #canvas id="canvas" style="height: 90vh; width: 100vw;"></canvas>
