--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -15,26 +15,26 @@
       <ion-list>
         <ion-item>
           <ion-label>Calculation</ion-label>
-          <ion-label>Calories</ion-label>
+          <ion-label>Calories/day</ion-label>
         </ion-item>
       </ion-list>
 
       <ion-list>
         <ion-item>
           <ion-label>BMI Value</ion-label>
-          <ion-label>{{BMIValue | number: '1.2-2'}}</ion-label>
+          <ion-label>{{BMIValue | number: '1.0-0'}}</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>BMR Value</ion-label>
-          <ion-label>{{bmr | number: '1.2-2'}} per day</ion-label>
+          <ion-label>{{bmr | number: '1.0-0'}}</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>TDEE Value</ion-label>
-          <ion-label>{{TDEEValue | number: '1.2-2'}} per day</ion-label>
+          <ion-label>{{TDEEValue | number: '1.0-0'}}</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>Target Calories</ion-label>
-          <ion-label>{{targetCalories | number: '1.2-2'}} per week</ion-label>
+          <ion-label>{{targetCalories | number: '1.0-0'}}</ion-label>
         </ion-item>
       </ion-list>
 
