--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.scss
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.scss
@@ -25,5 +25,9 @@
   .TARGET {
     color: purple; /* Color for very high values */
   }
+  .custom-label {
+    font-weight: bold;
+    font-family: 'fantasy', sans-serif;
+  }
 
 
