--- a/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
+++ b/src/app/pages/calories-calculator/calorie-target/calorie-target.component.html
@@ -39,15 +39,14 @@
       </ion-list>
 
 
-      <ion-item>
+      <div class="ion-padding">
                           <ion-button
-                            expand="expanded"
                             fill="outline"
-                            color="primary"
                             routerLink="/healthdata">
-                              Update health Form
+                            <ion-icon name="heart" class="heart-icon" color="danger"></ion-icon>
+                             Health Form
                           </ion-button>
-        </ion-item>
+        </div>
 
   </ion-card-content>
 </ion-card>
