--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -36,6 +36,10 @@
         <ion-button color="success" size="small" (click)="addFriend(notice)">Accept</ion-button>
         <ion-button color="danger" size="small" (click)="clearNotification(notice.id!); rejectFriendRequest(notice , notice.senderid! , notice.senttoid!);">Reject</ion-button>
       </div>
+      <div class="flex-center4" *ngIf="notice.message == 'Added you to join a workout session'">
+        <ion-button color="success" size="small" (click)="acceptToJoinWorkout(notice)">Accept</ion-button>
+        <ion-button color="danger" size="small" (click)="rejectToJoinWorkou(notice);">Reject</ion-button>
+      </div>
       <br>
       <ion-label class="right-align-label" style="margin-bottom: 5px;margin-right: 5px;">{{notice.sentdate }}</ion-label>
     </ion-card>
