--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -93,7 +93,7 @@
             type="button"
             (click)="calculateTotalCaloriesBurned()"
           >
-            Calculate Calories Burned
+            Calculate Calories
           </ion-button>
         </form>
       </div>
