--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -4,7 +4,7 @@
       <ion-buttons slot="start">
         <backbutton></backbutton>
       </ion-buttons>
-      <ion-title class="ion-text-center">Workout Tracking</ion-title>
+      <ion-title class="ion-text-center">Workout Planning</ion-title>
     </ion-toolbar>
   </ion-header>
 
