--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -12,7 +12,7 @@
     <ion-segment-button value="0">All</ion-segment-button>
     <ion-segment-button value="1">In Session</ion-segment-button>
     <ion-segment-button value="2">Completed</ion-segment-button>
-    <ion-segment-button value="3">Overdue</ion-segment-button>
+    <ion-segment-button value="3">Incomplete</ion-segment-button>
   </ion-segment>
 
   <workout-schedule id="0" [hidden]="selectedSegment !== '0'"
