--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -20,7 +20,7 @@
             <ion-icon class="schedule-value-icon" name="location-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br>
             <ion-icon class="schedule-value-icon" name="timer-outline"></ion-icon><ion-text class="schedule-value">{{schedule.duration}} minutes</ion-text><br>
           </ion-col>
-          <ion-col size="4" *ngIf="!isCompleted()">
+          <ion-col size="4" *ngIf="!isCompleted() && !schedule.filledExerciseList">
             <div class="weightlifting-animation">
               <ion-icon src="/assets/dumbbell-exercise-svgrepo-com.svg" size="large" *ngFor="let i of [1,2,3]"></ion-icon>
             </div>
