--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -33,7 +33,7 @@
       </ion-grid>
       <!-- <div *ngIf="isCompleted()"> -->
       <!-- <div *ngIf="isCompleted()"> -->
-      <div>
+      <div *ngIf="exercises.length>0">
         <h2 *ngIf="!schedule.filledExerciseList">Your session has ended. Which exercises were you able to finish</h2>
         <h2 *ngIf="schedule.filledExerciseList">Exercise checklist completed</h2>
         <swiper-container pagination="{hideOnClick: true}">
