--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -42,11 +42,11 @@
 <ion-footer class="input-field-footer">
   <ion-item lines="none" class="message-input-field">
     <div class="input-field-wrapper">
-      <ion-textarea placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
+      <ion-textarea autoGrow="true" placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     </div>
     <ion-fab horizontal="end" vertical ="bottom">
-      <ion-fab-button class="message-send-fab-button" [color]="isText() ? '' : 'medium'" [disabled]="!isText()">
-        <ion-icon name="send" (click)="sendMessage()" class="message-send-icon"></ion-icon>
+      <ion-fab-button class="message-send-fab-button" [color]="isText() ? '' : 'medium'" [disabled]="!isText()" (click)="sendMessage()">
+        <ion-icon name="send" class="message-send-icon"></ion-icon>
       </ion-fab-button>
     </ion-fab>
   </ion-item>
