--- a/src/global.scss
+++ b/src/global.scss
@@ -212,6 +212,17 @@ swiper-container::part(bullet) {
     color: #1D3557;
 }
 
+.group-options {
+    width: fit-content;
+    position: absolute;
+    right: 10px;
+    z-index: 999;
+    box-shadow: 0px 4px 20px 0px #31460457;
+    padding: 5px;
+    border-radius: 2px;
+    background-color: #A8DADC;
+}
+
 // color theme
 // 0% {color: #1D3557;}
 // 25% {color: #457B9D;}
